--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,23 +6,30 @@
     font-style: normal;
 }
 
-body {
+html, body {
+    height: 100%;    
+}
+
+* {
     font-family: DOS, Monaco, Menlo, Consolas, "Courier New", monospace;
     background: #000;
     color: #bbbbbb;
     font-size:24px;
-}
-.fuzzy {
-    filter: blur(1px);
-    /* text-shadow: 0px 1px rgb(187,187,187,.4), 0px -1px rgb(187,187,187,.4), 1px 0px rgb(187,187,187,.4), -1px 0px rgb(187,187,187,.4); */
+    font-size:18px;
+    
 }
 
-p {
-    margin:0;
-    padding:0;
+#terminal {
+    width:100%;
+    height:90%;
+    border:0;
+    background:black;
+    color:#bbb;
+    font-family:dos;
+    overflow:hidden;
 }
 
-#prompt-wrapper, #prompt {
+#prompt {
     font-family: DOS, Monaco, Menlo, Consolas, "Courier New", monospace;
 }
 
@@ -31,61 +38,5 @@ p {
     border:0;
     outline: none;
     width:100%;
-    font-size:24px;
     color:white;
-    /* color: transparent;
-    position: relative;
-    left:-999999px; */
-}
-
-#promptCopy {
-    position: relative;
-    top:-1em;
-}
-
-#systemPrompt {
-    position: relative;
-    top:-1px;
-}
-
-#cursor-full, #cursor-underscore {
-    background:#bbb;
-    margin-top:1px;
-    width:.70em;
-    display: inline-block;
-    -webkit-animation: 1s blink step-end infinite;
-    -moz-animation: 1s blink step-end infinite;
-    -ms-animation: 1s blink step-end infinite;
-    -o-animation: 1s blink step-end infinite;
-    animation: 1s blink step-end infinite;
-}
-
-#cursor-full {
-    height:1em;
-}
-
-#cursor-underscore {
-    height:.15em;
-}
-
-@keyframes blink { from, to { opacity: 1; } 50% { opacity: 000; } }  
-@-moz-keyframes blink { from, to { opacity: 1; } 50% { opacity: 000; } }
-@-webkit-keyframes blink { from, to { opacity: 1; } 50% { opacity: 000; } }
-@-ms-keyframes blink { from, to { opacity: 1; } 50% { opacity: 000; } }
-@-o-keyframes blink { from, to { opacity: 1; } 50% { opacity: 0; } }
-
-.color-36m {
-    color:cyan;
-}
-.color-39m {
-    color:#bbbbbb;
-}
-.color-33m {
-    color:yellow;
-}
-.color-32m { 
-    color: green;
-}
-.color-32m { 
-    color: red;
 }
